[gd_scene load_steps=32 format=2]

[ext_resource path="res://assets/window.png" type="Texture" id=1]
[ext_resource path="res://assets/playfield.png" type="Texture" id=2]
[ext_resource path="res://scripts/main.gd" type="Script" id=3]
[ext_resource path="res://assets/players_board.png" type="Texture" id=4]
[ext_resource path="res://assets/message_area.png" type="Texture" id=5]
[ext_resource path="res://assets/round.png" type="Texture" id=6]
[ext_resource path="res://assets/status_area.png" type="Texture" id=7]
[ext_resource path="res://scenes/game_over.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/Buttons/pressed.tres" type="StyleBox" id=9]
[ext_resource path="res://assets/Buttons/normal.tres" type="StyleBox" id=10]
[ext_resource path="res://assets/fonts/df_btn.tres" type="DynamicFont" id=11]
[ext_resource path="res://assets/Buttons/hover.tres" type="StyleBox" id=12]
[ext_resource path="res://assets/sound/click.wav" type="AudioStream" id=13]
[ext_resource path="res://assets/timeout.png" type="Texture" id=15]
[ext_resource path="res://assets/sound/win.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/donut.png" type="Texture" id=17]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/OpenSans-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/fonts/OpenSans-Semibold.ttf"

[sub_resource type="DynamicFont" id=4]
size = 12
extra_spacing_bottom = -5
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://assets/fonts/OpenSans-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=6]
size = 12
font_data = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 22
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://assets/fonts/OpenSans-ExtraBold.ttf"

[sub_resource type="DynamicFont" id=9]
size = 72
font_data = SubResource( 8 )

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("round_anim_label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.450625, 0.450625 ),
"update": 0,
"values": [ Vector2( 69, -100 ), Vector2( 69, 350 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("round_anim_label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "show_mouse"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("mouse_pos:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 2.2974, 0.233258 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mouse_pos:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.537255, 0.0156863, 0.898039, 1 ), Color( 0.537255, 0.0156863, 0.898039, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="AudioStreamSample" id=12]
data = PoolByteArray( 0, 8, 15, 13, 37, 0 )
format = 1

[sub_resource type="DynamicFont" id=13]
size = 14
font_data = SubResource( 5 )

[sub_resource type="Animation" id=14]
resource_name = "veryClose"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("messages:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.996078, 0.00392157, 0.00392157, 1 ), Color( 0.984314, 0.00784314, 0.00784314, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Environment" id=15]
background_mode = 4
glow_enabled = true
glow_levels/3 = false
glow_levels/4 = true
glow_levels/7 = true
glow_intensity = 3.5
glow_strength = 0.87
glow_blend_mode = 0
glow_hdr_threshold = 0.5
glow_hdr_luminance_cap = 47.2
glow_hdr_scale = 2.6
glow_bicubic_upscale = true

[node name="Node2D" type="Node2D"]
pause_mode = 2
script = ExtResource( 3 )

[node name="paused" type="Node2D" parent="."]
visible = false
z_index = 2

[node name="paused" type="Sprite" parent="paused"]
modulate = Color( 0, 0, 0, 0.627451 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="pause_label" type="Label" parent="paused"]
margin_left = 2.0
margin_top = 3.0
margin_right = 457.0
margin_bottom = 457.0
custom_fonts/font = SubResource( 2 )
text = "Game is paused
Click on \"RESUME\" to continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="Node2D" parent="."]

[node name="window" type="Sprite" parent="bg"]
z_index = -3
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="playfield" type="Sprite" parent="bg"]
z_index = -2
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="start_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="start_next_round_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="bot_thinking" type="Timer" parent="."]
one_shot = true

[node name="players_board" type="Sprite" parent="."]
position = Vector2( 552.156, 278.127 )
texture = ExtResource( 4 )

[node name="players_container" type="VBoxContainer" parent="."]
margin_left = 464.0
margin_top = 106.0
margin_right = 639.0
margin_bottom = 190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="status_area" type="Sprite" parent="."]
position = Vector2( 552.471, 48.0362 )
texture = ExtResource( 7 )

[node name="message_area" type="Sprite" parent="status_area"]
position = Vector2( -0.0492554, 22.0557 )
texture = ExtResource( 5 )

[node name="messages" type="Label" parent="."]
margin_left = 471.0
margin_top = 45.0
margin_right = 635.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Good Luck!
Enjoy Playing"
align = 1
valign = 1
autowrap = true
clip_text = true
max_lines_visible = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="round_img" type="Sprite" parent="."]
position = Vector2( 613.607, 19.3719 )
texture = ExtResource( 6 )

[node name="round_label" type="Label" parent="."]
margin_left = 592.589
margin_top = 0.871916
margin_right = 634.589
margin_bottom = 17.8719
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.203922, 0.286275, 0.368627, 1 )
text = "Round"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="round" type="Label" parent="."]
margin_left = 591.753
margin_top = 17.8719
margin_right = 633.753
margin_bottom = 34.8719
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "1/10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_timer_label" type="Label" parent="."]
margin_left = 474.753
margin_top = 4.87192
margin_right = 567.753
margin_bottom = 35.8719
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0, 0.501961, 1 )
text = "25"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gui" type="Control" parent="."]
margin_right = 640.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_over" parent="gui" instance=ExtResource( 8 )]
anchor_left = 0.504251
anchor_top = 0.783412
anchor_right = 0.504251
anchor_bottom = 0.783412
margin_left = -246.037
margin_top = -356.906
margin_right = 58.8633
margin_bottom = 42.0944

[node name="player_timer" type="Timer" parent="."]
wait_time = 26.0
one_shot = true

[node name="panel" type="Node2D" parent="."]

[node name="buttons" type="HBoxContainer" parent="panel"]
margin_top = 455.0
margin_right = 450.0
margin_bottom = 478.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="restart" type="Button" parent="panel/buttons"]
pause_mode = 2
margin_right = 109.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 10 )
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="panel/buttons"]
pause_mode = 2
margin_left = 113.0
margin_right = 222.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 10 )
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause" type="Button" parent="panel/buttons"]
pause_mode = 2
margin_left = 226.0
margin_right = 335.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 10 )
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PAUSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sound" type="Button" parent="panel/buttons"]
pause_mode = 2
margin_left = 339.0
margin_right = 450.0
margin_bottom = 23.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 10 )
custom_fonts/font = ExtResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SOUND:ON"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="round_anim_label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 69.0
margin_top = -100.0
margin_right = 385.0
margin_bottom = -1.0
custom_fonts/font = SubResource( 9 )
text = "ROUND1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim" type="AnimationPlayer" parent="."]
anims/round = SubResource( 10 )

[node name="manim" type="AnimationPlayer" parent="."]
anims/show_mouse = SubResource( 11 )

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="round_sfx" type="AudioStreamPlayer" parent="."]
stream = SubResource( 12 )

[node name="game_over_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="timeout" type="Popup" parent="."]
margin_left = 133.0
margin_top = 117.0
margin_right = 333.0
margin_bottom = 317.0
rect_min_size = Vector2( 200, 200 )
focus_mode = 1
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="timeout" type="Sprite" parent="timeout"]
texture = ExtResource( 15 )
centered = false

[node name="timeout_label" type="Label" parent="timeout"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = -80.0
margin_right = 103.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Timeout reached and no player has played.
Would you like to continue?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_round_btn" type="Button" parent="timeout"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -58.0
margin_right = 65.0
margin_bottom = -21.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 10 )
custom_fonts/font = ExtResource( 11 )
shortcut_in_tooltip = false
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tutorial" type="Popup" parent="."]
visible = true
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 450, 450 )
focus_mode = 1
popup_exclusive = true
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="playfield" type="Sprite" parent="tutorial"]
texture = ExtResource( 2 )
centered = false

[node name="tutorial" type="Label" parent="tutorial"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -195.5
margin_top = -153.5
margin_right = 195.5
margin_bottom = 153.5
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "How to play:

1. Wait for the buggles to stop moving around.
2. Place your primary slime core.
3. Wait for other players to place their slime core.
4. Observe the preliminary scoring.
5. Place your secondary slime core.
	Steal buggles from other players!
	Defend your buggles!
6. When all slime cores are placed, scoring for the round takes place.
7. Best player after 10 rounds wins the game."
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="play_btn" type="Button" parent="tutorial"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -65.0
margin_top = -58.0
margin_right = 65.0
margin_bottom = -21.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 10 )
custom_fonts/font = ExtResource( 11 )
shortcut_in_tooltip = false
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mouse_pos" type="Sprite" parent="."]
modulate = Color( 0.537255, 0.0156863, 0.898039, 1 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 17 )

[node name="warn_player" type="AnimationPlayer" parent="."]
anims/veryClose = SubResource( 14 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 15 )
[connection signal="timeout" from="start_next_round_timer" to="." method="on_start_next_round_timer_timeout"]
[connection signal="timeout" from="bot_thinking" to="." method="on_bot_thinking_timeout"]
[connection signal="timeout" from="player_timer" to="." method="on_player_timer_timeout"]
[connection signal="pressed" from="panel/buttons/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="panel/buttons/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="panel/buttons/pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="panel/buttons/sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="timeout/next_round_btn" to="." method="_on_next_round_btn_pressed"]
[connection signal="pressed" from="tutorial/play_btn" to="." method="_on_play_btn_pressed"]
